# mission-sime-ros2

./: .gitignore  README.md  setup_etape2.sh  setup_etape3.sh  setup_etape4.sh  setup_etape5.sh  setup_etape6.sh
src/mission_sime/: package.xml  setup.cfg  setup.py
src/mission_sime/launch/: mission.launch.py
src/mission_sime/mission_sime/: __init__.py  c3po_follower.py  enemy_spawner.py  mission_supervisor.py  r2d2_master.py
src/mission_sime/msg/: EnemyStatus.msg  RobotPose.msg
src/mission_sime/scripts/config/: params.yaml
src/mission_sime/srv/: RemoveRobot.srv  SpawnRobot.srv
